--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "algtrainer",
-    "homepage": "https://lucasch37.github.io/Rubiks-Cube-AlgTrainer/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "deploy": "gh-pages -d dist",
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
